# SAED_llm

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: config.yaml.example
config/data/: data.yaml.example
config/experiments/: cot.yaml.example  edm.yaml.example  llm.yaml.example
config/llms/: azure_openai.yaml.example  ollama.yaml.example
data/: README.md
data/labels/synthetic/: ground_truth.csv
data/ontology/: BEO.rdf  BEO_clean.rdf
data/tables/synthetic/: 1.csv  table_list.csv
notebooks/: demo_results.ipynb
results/: results_cot_llama3.1_8b.json  results_edm_gpt4o_mini.json  results_edm_llama3.1_8b.json  results_llm_gpt4o_mini.json  results_llm_llama3.1_8b.json
src/saed/: eval.py  run.py
src/saed/data/: __init__.py  data.py
src/saed/ensemble/: __init__.py  desicion_maker.py  llms.py  prompts.py
src/saed/onto/: __init__.py  ontoclass.py  ontodag.py
src/saed/utils/: __init__.py  utils.py
