[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saed"
version = "0.1.0"
description = "SAED-LLM: Semantic Annotation for Energy Data using ensemble decision-making with Large Language Models"
authors = [
{name = "Anonymous Authors", email = "anonymous_user@example.mail.com"}
]
license = { text = "MIT" }
readme = "README.md" # Optional
requires-python = ">=3.7" # Adjust as needed
urls = { "Homepage" = "https://github.com/anonymous_user/anonymous_project" }
classifiers = [
 "Development Status :: 1 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
